y.output
Nonterminals useless in grammar

   left_bracket
   right_bracket


Rules useless in grammar

  282 left_bracket: '['

  283 right_bracket: ']'


Rules useless in parser due to conflicts

  276 $@2: /* empty */

  278 $@3: /* empty */


State 27 conflicts: 1 shift/reduce
State 32 conflicts: 3 shift/reduce, 3 reduce/reduce
State 470 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 left_parenthesis: '('

   11 right_parenthesis: ')'

   12 left_curly: '{'

   13 right_curly: '}'

   14 string: STRING_LITERAL
   15       | FUNC_NAME

   16 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   17 generic_assoc_list: generic_association
   18                   | generic_assoc_list ',' generic_association

   19 generic_association: type_name ':' assignment_expression
   20                    | DEFAULT ':' assignment_expression

   21 postfix_expression: primary_expression
   22                   | postfix_expression '[' expression ']'
   23                   | postfix_expression '(' ')'
   24                   | postfix_expression '(' argument_expression_list ')'
   25                   | postfix_expression '.' IDENTIFIER
   26                   | postfix_expression PTR_OP IDENTIFIER
   27                   | postfix_expression INC_OP
   28                   | postfix_expression DEC_OP
   29                   | '(' type_name ')' '{' initializer_list '}'
   30                   | '(' type_name ')' '{' initializer_list ',' '}'

   31 argument_expression_list: assignment_expression
   32                         | argument_expression_list ',' assignment_expression

   33 unary_expression: postfix_expression
   34                 | INC_OP unary_expression
   35                 | DEC_OP unary_expression
   36                 | unary_operator cast_expression
   37                 | SIZEOF unary_expression
   38                 | SIZEOF '(' type_name ')'
   39                 | ALIGNOF '(' type_name ')'

   40 unary_operator: '&'
   41               | '*'
   42               | '+'
   43               | '-'
   44               | '~'
   45               | '!'

   46 cast_expression: unary_expression
   47                | '(' type_name ')' cast_expression

   48 multiplicative_expression: cast_expression
   49                          | multiplicative_expression '*' cast_expression
   50                          | multiplicative_expression '/' cast_expression
   51                          | multiplicative_expression '%' cast_expression

   52 additive_expression: multiplicative_expression
   53                    | additive_expression '+' multiplicative_expression
   54                    | additive_expression '-' multiplicative_expression

   55 shift_expression: additive_expression
   56                 | shift_expression LEFT_OP additive_expression
   57                 | shift_expression RIGHT_OP additive_expression

   58 relational_expression: shift_expression
   59                      | relational_expression '<' shift_expression
   60                      | relational_expression '>' shift_expression
   61                      | relational_expression LE_OP shift_expression
   62                      | relational_expression GE_OP shift_expression

   63 equality_expression: relational_expression
   64                    | equality_expression EQ_OP relational_expression
   65                    | equality_expression NE_OP relational_expression

   66 and_expression: equality_expression
   67               | and_expression '&' equality_expression

   68 exclusive_or_expression: and_expression
   69                        | exclusive_or_expression '^' and_expression

   70 inclusive_or_expression: exclusive_or_expression
   71                        | inclusive_or_expression '|' exclusive_or_expression

   72 logical_and_expression: inclusive_or_expression
   73                       | logical_and_expression AND_OP inclusive_or_expression

   74 logical_or_expression: logical_and_expression
   75                      | logical_or_expression OR_OP logical_and_expression

   76 conditional_expression: logical_or_expression
   77                       | logical_or_expression '?' expression ':' conditional_expression

   78 assignment_expression: conditional_expression
   79                      | unary_expression assignment_operator assignment_expression

   80 assignment_operator: '='
   81                    | MUL_ASSIGN
   82                    | DIV_ASSIGN
   83                    | MOD_ASSIGN
   84                    | ADD_ASSIGN
   85                    | SUB_ASSIGN
   86                    | LEFT_ASSIGN
   87                    | RIGHT_ASSIGN
   88                    | AND_ASSIGN
   89                    | XOR_ASSIGN
   90                    | OR_ASSIGN

   91 expression: assignment_expression
   92           | expression ',' assignment_expression

   93 constant_expression: conditional_expression

   94 declaration: declaration_specifiers ';'
   95            | declaration_specifiers init_declarator_list ';'
   96            | static_assert_declaration

   97 declaration_specifiers: storage_class_specifier declaration_specifiers
   98                       | storage_class_specifier
   99                       | type_specifier declaration_specifiers
  100                       | type_specifier
  101                       | type_qualifier declaration_specifiers
  102                       | type_qualifier
  103                       | function_specifier declaration_specifiers
  104                       | function_specifier
  105                       | alignment_specifier declaration_specifiers
  106                       | alignment_specifier

  107 init_declarator_list: init_declarator
  108                     | init_declarator_list ',' init_declarator

  109 init_declarator: declarator '=' initializer
  110                | declarator

  111 storage_class_specifier: TYPEDEF
  112                        | EXTERN
  113                        | STATIC
  114                        | THREAD_LOCAL
  115                        | AUTO
  116                        | REGISTER

  117 type_specifier: VOID
  118               | CHAR
  119               | SHORT
  120               | INT
  121               | LONG
  122               | FLOAT
  123               | DOUBLE
  124               | SIGNED
  125               | UNSIGNED
  126               | BOOL
  127               | COMPLEX
  128               | IMAGINARY
  129               | atomic_type_specifier
  130               | struct_or_union_specifier
  131               | enum_specifier
  132               | TYPEDEF_NAME

  133 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  134                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  135                          | struct_or_union IDENTIFIER

  136 struct_or_union: STRUCT
  137                | UNION

  138 struct_declaration_list: struct_declaration
  139                        | struct_declaration_list struct_declaration

  140 struct_declaration: specifier_qualifier_list ';'
  141                   | specifier_qualifier_list struct_declarator_list ';'
  142                   | static_assert_declaration

  143 specifier_qualifier_list: type_specifier specifier_qualifier_list
  144                         | type_specifier
  145                         | type_qualifier specifier_qualifier_list
  146                         | type_qualifier

  147 struct_declarator_list: struct_declarator
  148                       | struct_declarator_list ',' struct_declarator

  149 struct_declarator: ':' constant_expression
  150                  | declarator ':' constant_expression
  151                  | declarator

  152 enum_specifier: ENUM '{' enumerator_list '}'
  153               | ENUM '{' enumerator_list ',' '}'
  154               | ENUM IDENTIFIER '{' enumerator_list '}'
  155               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  156               | ENUM IDENTIFIER

  157 enumerator_list: enumerator
  158                | enumerator_list ',' enumerator

  159 enumerator: enumeration_constant '=' constant_expression
  160           | enumeration_constant

  161 atomic_type_specifier: ATOMIC '(' type_name ')'

  162 type_qualifier: CONST
  163               | RESTRICT
  164               | VOLATILE
  165               | ATOMIC

  166 function_specifier: INLINE
  167                   | NORETURN

  168 alignment_specifier: ALIGNAS '(' type_name ')'
  169                    | ALIGNAS '(' constant_expression ')'

  170 declarator: pointer direct_declarator
  171           | direct_declarator

  172 direct_declarator: IDENTIFIER
  173                  | '(' declarator ')'
  174                  | direct_declarator '[' ']'
  175                  | direct_declarator '[' '*' ']'
  176                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  177                  | direct_declarator '[' STATIC assignment_expression ']'
  178                  | direct_declarator '[' type_qualifier_list '*' ']'
  179                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  180                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  181                  | direct_declarator '[' type_qualifier_list ']'
  182                  | direct_declarator '[' assignment_expression ']'
  183                  | direct_declarator left_parenthesis parameter_type_list right_parenthesis
  184                  | direct_declarator left_parenthesis right_parenthesis
  185                  | direct_declarator '(' identifier_list ')'

  186 pointer: '*' type_qualifier_list pointer
  187        | '*' type_qualifier_list
  188        | '*' pointer
  189        | '*'

  190 type_qualifier_list: type_qualifier
  191                    | type_qualifier_list type_qualifier

  192 parameter_type_list: parameter_list ',' ELLIPSIS
  193                    | parameter_list

  194 parameter_list: parameter_declaration
  195               | parameter_list ',' parameter_declaration

  196 parameter_declaration: declaration_specifiers declarator
  197                      | declaration_specifiers abstract_declarator
  198                      | declaration_specifiers

  199 identifier_list: IDENTIFIER
  200                | identifier_list ',' IDENTIFIER

  201 type_name: specifier_qualifier_list abstract_declarator
  202          | specifier_qualifier_list

  203 abstract_declarator: pointer direct_abstract_declarator
  204                    | pointer
  205                    | direct_abstract_declarator

  206 direct_abstract_declarator: '(' abstract_declarator ')'
  207                           | '[' ']'
  208                           | '[' '*' ']'
  209                           | '[' STATIC type_qualifier_list assignment_expression ']'
  210                           | '[' STATIC assignment_expression ']'
  211                           | '[' type_qualifier_list STATIC assignment_expression ']'
  212                           | '[' type_qualifier_list assignment_expression ']'
  213                           | '[' type_qualifier_list ']'
  214                           | '[' assignment_expression ']'
  215                           | direct_abstract_declarator '[' ']'
  216                           | direct_abstract_declarator '[' '*' ']'
  217                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  218                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  219                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  220                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  221                           | direct_abstract_declarator '[' type_qualifier_list ']'
  222                           | direct_abstract_declarator '[' assignment_expression ']'
  223                           | '(' ')'
  224                           | '(' parameter_type_list ')'
  225                           | direct_abstract_declarator '(' ')'
  226                           | direct_abstract_declarator '(' parameter_type_list ')'

  227 initializer: '{' initializer_list '}'
  228            | '{' initializer_list ',' '}'
  229            | assignment_expression

  230 initializer_list: designation initializer
  231                 | initializer
  232                 | initializer_list ',' designation initializer
  233                 | initializer_list ',' initializer

  234 designation: designator_list '='

  235 designator_list: designator
  236                | designator_list designator

  237 designator: '[' constant_expression ']'
  238           | '.' IDENTIFIER

  239 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  240 statement: labeled_statement
  241          | compound_statement
  242          | expression_statement
  243          | selection_statement
  244          | iteration_statement
  245          | jump_statement

  246 labeled_statement: IDENTIFIER ':' statement
  247                  | CASE constant_expression ':' statement
  248                  | DEFAULT ':' statement

  249 compound_statement: left_curly right_curly
  250                   | left_curly block_item_list right_curly

  251 block_item_list: block_item
  252                | block_item_list block_item

  253 block_item: declaration
  254           | statement

  255 expression_statement: ';'
  256                     | expression ';'

  257 selection_statement: IF '(' expression ')' statement ELSE statement
  258                    | IF '(' expression ')' statement
  259                    | SWITCH '(' expression ')' statement

  260 $@1: /* empty */

  261 iteration_statement: WHILE $@1 left_parenthesis expression right_parenthesis statement
  262                    | DO statement WHILE '(' expression ')' ';'
  263                    | FOR '(' expression_statement expression_statement ')' statement
  264                    | FOR '(' expression_statement expression_statement expression ')' statement
  265                    | FOR '(' declaration expression_statement ')' statement
  266                    | FOR '(' declaration expression_statement expression ')' statement

  267 jump_statement: GOTO IDENTIFIER ';'
  268               | CONTINUE ';'
  269               | BREAK ';'
  270               | RETURN ';'
  271               | RETURN expression ';'

  272 translation_unit: external_declaration
  273                 | translation_unit external_declaration

  274 external_declaration: function_definition
  275                     | declaration

  276 $@2: /* empty */

  277 function_definition: declaration_specifiers $@2 declarator declaration_list compound_statement

  278 $@3: /* empty */

  279 function_definition: declaration_specifiers $@3 declarator compound_statement

  280 declaration_list: declaration
  281                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'%' (37) 51
'&' (38) 40 67
'(' (40) 4 10 16 23 24 29 30 38 39 47 161 168 169 173 185 206 223 224
    225 226 239 257 258 259 262 263 264 265 266
')' (41) 4 11 16 23 24 29 30 38 39 47 161 168 169 173 185 206 223 224
    225 226 239 257 258 259 262 263 264 265 266
'*' (42) 41 49 175 178 186 187 188 189 208 216
'+' (43) 42 53
',' (44) 16 18 30 32 92 108 148 153 155 158 192 195 200 228 232 233
    239
'-' (45) 43 54
'.' (46) 25 238
'/' (47) 50
':' (58) 19 20 77 149 150 246 247 248
';' (59) 94 95 140 141 239 255 256 262 267 268 269 270 271
'<' (60) 59
'=' (61) 80 109 159 234
'>' (62) 60
'?' (63) 77
'[' (91) 22 174 175 176 177 178 179 180 181 182 207 208 209 210 211
    212 213 214 215 216 217 218 219 220 221 222 237
']' (93) 22 174 175 176 177 178 179 180 181 182 207 208 209 210 211
    212 213 214 215 216 217 218 219 220 221 222 237
'^' (94) 69
'{' (123) 12 29 30 133 134 152 153 154 155 227 228
'|' (124) 71
'}' (125) 13 29 30 133 134 152 153 154 155 227 228
'~' (126) 44
error (256)
IDENTIFIER (258) 1 9 25 26 134 135 154 155 156 172 199 200 238 246
    267
I_CONSTANT (259) 6
F_CONSTANT (260) 7
STRING_LITERAL (261) 14 239
FUNC_NAME (262) 15
SIZEOF (263) 37 38
PTR_OP (264) 26
INC_OP (265) 27 34
DEC_OP (266) 28 35
LEFT_OP (267) 56
RIGHT_OP (268) 57
LE_OP (269) 61
GE_OP (270) 62
EQ_OP (271) 64
NE_OP (272) 65
AND_OP (273) 73
OR_OP (274) 75
MUL_ASSIGN (275) 81
DIV_ASSIGN (276) 82
MOD_ASSIGN (277) 83
ADD_ASSIGN (278) 84
SUB_ASSIGN (279) 85
LEFT_ASSIGN (280) 86
RIGHT_ASSIGN (281) 87
AND_ASSIGN (282) 88
XOR_ASSIGN (283) 89
OR_ASSIGN (284) 90
TYPEDEF_NAME (285) 132
ENUMERATION_CONSTANT (286) 8
TYPEDEF (287) 111
EXTERN (288) 112
STATIC (289) 113 176 177 179 209 210 211 217 218 220
AUTO (290) 115
REGISTER (291) 116
INLINE (292) 166
CONST (293) 162
RESTRICT (294) 163
VOLATILE (295) 164
BOOL (296) 126
CHAR (297) 118
SHORT (298) 119
INT (299) 120
LONG (300) 121
SIGNED (301) 124
UNSIGNED (302) 125
FLOAT (303) 122
DOUBLE (304) 123
VOID (305) 117
COMPLEX (306) 127
IMAGINARY (307) 128
STRUCT (308) 136
UNION (309) 137
ENUM (310) 152 153 154 155 156
ELLIPSIS (311) 192
CASE (312) 247
DEFAULT (313) 20 248
IF (314) 257 258
ELSE (315) 257
SWITCH (316) 259
WHILE (317) 261 262
DO (318) 262
FOR (319) 263 264 265 266
GOTO (320) 267
CONTINUE (321) 268
BREAK (322) 269
RETURN (323) 270 271
ALIGNAS (324) 168 169
ALIGNOF (325) 39
ATOMIC (326) 161 165
GENERIC (327) 16
NORETURN (328) 167
STATIC_ASSERT (329) 239
THREAD_LOCAL (330) 114


Nonterminals, with rules where they appear

$accept (100)
    on left: 0
primary_expression (101)
    on left: 1 2 3 4 5, on right: 21
constant (102)
    on left: 6 7 8, on right: 2
enumeration_constant (103)
    on left: 9, on right: 159 160
left_parenthesis (104)
    on left: 10, on right: 183 184 261
right_parenthesis (105)
    on left: 11, on right: 183 184 261
left_curly (106)
    on left: 12, on right: 249 250
right_curly (107)
    on left: 13, on right: 249 250
string (108)
    on left: 14 15, on right: 3
generic_selection (109)
    on left: 16, on right: 5
generic_assoc_list (110)
    on left: 17 18, on right: 16 18
generic_association (111)
    on left: 19 20, on right: 17 18
postfix_expression (112)
    on left: 21 22 23 24 25 26 27 28 29 30, on right: 22 23 24 25 26
    27 28 33
argument_expression_list (113)
    on left: 31 32, on right: 24 32
unary_expression (114)
    on left: 33 34 35 36 37 38 39, on right: 34 35 37 46 79
unary_operator (115)
    on left: 40 41 42 43 44 45, on right: 36
cast_expression (116)
    on left: 46 47, on right: 36 47 48 49 50 51
multiplicative_expression (117)
    on left: 48 49 50 51, on right: 49 50 51 52 53 54
additive_expression (118)
    on left: 52 53 54, on right: 53 54 55 56 57
shift_expression (119)
    on left: 55 56 57, on right: 56 57 58 59 60 61 62
relational_expression (120)
    on left: 58 59 60 61 62, on right: 59 60 61 62 63 64 65
equality_expression (121)
    on left: 63 64 65, on right: 64 65 66 67
and_expression (122)
    on left: 66 67, on right: 67 68 69
exclusive_or_expression (123)
    on left: 68 69, on right: 69 70 71
inclusive_or_expression (124)
    on left: 70 71, on right: 71 72 73
logical_and_expression (125)
    on left: 72 73, on right: 73 74 75
logical_or_expression (126)
    on left: 74 75, on right: 75 76 77
conditional_expression (127)
    on left: 76 77, on right: 77 78 93
assignment_expression (128)
    on left: 78 79, on right: 16 19 20 31 32 79 91 92 176 177 179 180
    182 209 210 211 212 214 217 218 219 220 222 229
assignment_operator (129)
    on left: 80 81 82 83 84 85 86 87 88 89 90, on right: 79
expression (130)
    on left: 91 92, on right: 4 22 77 92 256 257 258 259 261 262 264
    266 271
constant_expression (131)
    on left: 93, on right: 149 150 159 169 237 239 247
declaration (132)
    on left: 94 95 96, on right: 253 265 266 275 280 281
declaration_specifiers (133)
    on left: 97 98 99 100 101 102 103 104 105 106, on right: 94 95
    97 99 101 103 105 196 197 198 277 279
init_declarator_list (134)
    on left: 107 108, on right: 95 108
init_declarator (135)
    on left: 109 110, on right: 107 108
storage_class_specifier (136)
    on left: 111 112 113 114 115 116, on right: 97 98
type_specifier (137)
    on left: 117 118 119 120 121 122 123 124 125 126 127 128 129 130
    131 132, on right: 99 100 143 144
struct_or_union_specifier (138)
    on left: 133 134 135, on right: 130
struct_or_union (139)
    on left: 136 137, on right: 133 134 135
struct_declaration_list (140)
    on left: 138 139, on right: 133 134 139
struct_declaration (141)
    on left: 140 141 142, on right: 138 139
specifier_qualifier_list (142)
    on left: 143 144 145 146, on right: 140 141 143 145 201 202
struct_declarator_list (143)
    on left: 147 148, on right: 141 148
struct_declarator (144)
    on left: 149 150 151, on right: 147 148
enum_specifier (145)
    on left: 152 153 154 155 156, on right: 131
enumerator_list (146)
    on left: 157 158, on right: 152 153 154 155 158
enumerator (147)
    on left: 159 160, on right: 157 158
atomic_type_specifier (148)
    on left: 161, on right: 129
type_qualifier (149)
    on left: 162 163 164 165, on right: 101 102 145 146 190 191
function_specifier (150)
    on left: 166 167, on right: 103 104
alignment_specifier (151)
    on left: 168 169, on right: 105 106
declarator (152)
    on left: 170 171, on right: 109 110 150 151 173 196 277 279
direct_declarator (153)
    on left: 172 173 174 175 176 177 178 179 180 181 182 183 184 185,
    on right: 170 171 174 175 176 177 178 179 180 181 182 183 184 185
pointer (154)
    on left: 186 187 188 189, on right: 170 186 188 203 204
type_qualifier_list (155)
    on left: 190 191, on right: 176 178 179 180 181 186 187 191 209
    211 212 213 217 219 220 221
parameter_type_list (156)
    on left: 192 193, on right: 183 224 226
parameter_list (157)
    on left: 194 195, on right: 192 193 195
parameter_declaration (158)
    on left: 196 197 198, on right: 194 195
identifier_list (159)
    on left: 199 200, on right: 185 200
type_name (160)
    on left: 201 202, on right: 19 29 30 38 39 47 161 168
abstract_declarator (161)
    on left: 203 204 205, on right: 197 201 206
direct_abstract_declarator (162)
    on left: 206 207 208 209 210 211 212 213 214 215 216 217 218 219
    220 221 222 223 224 225 226, on right: 203 205 215 216 217 218
    219 220 221 222 225 226
initializer (163)
    on left: 227 228 229, on right: 109 230 231 232 233
initializer_list (164)
    on left: 230 231 232 233, on right: 29 30 227 228 232 233
designation (165)
    on left: 234, on right: 230 232
designator_list (166)
    on left: 235 236, on right: 234 236
designator (167)
    on left: 237 238, on right: 235 236
static_assert_declaration (168)
    on left: 239, on right: 96 142
statement (169)
    on left: 240 241 242 243 244 245, on right: 246 247 248 254 257
    258 259 261 262 263 264 265 266
labeled_statement (170)
    on left: 246 247 248, on right: 240
compound_statement (171)
    on left: 249 250, on right: 241 277 279
block_item_list (172)
    on left: 251 252, on right: 250 252
block_item (173)
    on left: 253 254, on right: 251 252
expression_statement (174)
    on left: 255 256, on right: 242 263 264 265 266
selection_statement (175)
    on left: 257 258 259, on right: 243
iteration_statement (176)
    on left: 261 262 263 264 265 266, on right: 244
$@1 (177)
    on left: 260, on right: 261
jump_statement (178)
    on left: 267 268 269 270 271, on right: 245
translation_unit (179)
    on left: 272 273, on right: 0 273
external_declaration (180)
    on left: 274 275, on right: 272 273
function_definition (181)
    on left: 277 279, on right: 274
$@2 (182)
    on left: 276, on right: 277
$@3 (183)
    on left: 278, on right: 279
declaration_list (184)
    on left: 280 281, on right: 277 281


state 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


state 1

  132 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 132 (type_specifier)


state 2

  111 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 111 (storage_class_specifier)


state 3

  112 storage_class_specifier: EXTERN .

    $default  reduce using rule 112 (storage_class_specifier)


state 4

  113 storage_class_specifier: STATIC .

    $default  reduce using rule 113 (storage_class_specifier)


state 5

  115 storage_class_specifier: AUTO .

    $default  reduce using rule 115 (storage_class_specifier)


state 6

  116 storage_class_specifier: REGISTER .

    $default  reduce using rule 116 (storage_class_specifier)


state 7

  166 function_specifier: INLINE .

    $default  reduce using rule 166 (function_specifier)


state 8

  162 type_qualifier: CONST .

    $default  reduce using rule 162 (type_qualifier)


state 9

  163 type_qualifier: RESTRICT .

    $default  reduce using rule 163 (type_qualifier)


state 10

  164 type_qualifier: VOLATILE .

    $default  reduce using rule 164 (type_qualifier)


state 11

  126 type_specifier: BOOL .

    $default  reduce using rule 126 (type_specifier)


state 12

  118 type_specifier: CHAR .

    $default  reduce using rule 118 (type_specifier)


state 13

  119 type_specifier: SHORT .

    $default  reduce using rule 119 (type_specifier)


state 14

  120 type_specifier: INT .

    $default  reduce using rule 120 (type_specifier)


state 15

  121 type_specifier: LONG .

    $default  reduce using rule 121 (type_specifier)


state 16

  124 type_specifier: SIGNED .

    $default  reduce using rule 124 (type_specifier)


state 17

  125 type_specifier: UNSIGNED .

    $default  reduce using rule 125 (type_specifier)


state 18

  122 type_specifier: FLOAT .

    $default  reduce using rule 122 (type_specifier)


state 19

  123 type_specifier: DOUBLE .

    $default  reduce using rule 123 (type_specifier)


state 20

  117 type_specifier: VOID .

    $default  reduce using rule 117 (type_specifier)


state 21

  127 type_specifier: COMPLEX .

    $default  reduce using rule 127 (type_specifier)


state 22

  128 type_specifier: IMAGINARY .

    $default  reduce using rule 128 (type_specifier)


state 23

  136 struct_or_union: STRUCT .

    $default  reduce using rule 136 (struct_or_union)


state 24

  137 struct_or_union: UNION .

    $default  reduce using rule 137 (struct_or_union)


state 25

  152 enum_specifier: ENUM . '{' enumerator_list '}'
  153               | ENUM . '{' enumerator_list ',' '}'
  154               | ENUM . IDENTIFIER '{' enumerator_list '}'
  155               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  156               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


state 26

  168 alignment_specifier: ALIGNAS . '(' type_name ')'
  169                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 48


state 27

  161 atomic_type_specifier: ATOMIC . '(' type_name ')'
  165 type_qualifier: ATOMIC .

    '('  shift, and go to state 49

    '('       [reduce using rule 165 (type_qualifier)]
    $default  reduce using rule 165 (type_qualifier)


state 28

  167 function_specifier: NORETURN .

    $default  reduce using rule 167 (function_specifier)


state 29

  239 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


state 30

  114 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 114 (storage_class_specifier)


state 31

  275 external_declaration: declaration .

    $default  reduce using rule 275 (external_declaration)


state 32

   94 declaration: declaration_specifiers . ';'
   95            | declaration_specifiers . init_declarator_list ';'
  277 function_definition: declaration_specifiers . $@2 declarator declaration_list compound_statement
  279                    | declaration_specifiers . $@3 declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    IDENTIFIER  [reduce using rule 276 ($@2)]
    IDENTIFIER  [reduce using rule 278 ($@3)]
    '('         [reduce using rule 276 ($@2)]
    '('         [reduce using rule 278 ($@3)]
    '*'         [reduce using rule 276 ($@2)]
    '*'         [reduce using rule 278 ($@3)]

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59
    $@2                   go to state 60
    $@3                   go to state 61


state 33

   97 declaration_specifiers: storage_class_specifier . declaration_specifiers
   98                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 34

   99 declaration_specifiers: type_specifier . declaration_specifiers
  100                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 100 (declaration_specifiers)

    declaration_specifiers     go to state 63
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 35

  130 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 130 (type_specifier)


state 36

  133 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  134                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  135                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 64
    '{'         shift, and go to state 65


state 37

  131 type_specifier: enum_specifier .

    $default  reduce using rule 131 (type_specifier)


state 38

  129 type_specifier: atomic_type_specifier .

    $default  reduce using rule 129 (type_specifier)


state 39

  101 declaration_specifiers: type_qualifier . declaration_specifiers
  102                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 102 (declaration_specifiers)

    declaration_specifiers     go to state 66
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 40

  103 declaration_specifiers: function_specifier . declaration_specifiers
  104                       | function_specifier .
